--- a/web/src/routes/login/login.css
+++ b/web/src/routes/login/login.css
@@ -1,7 +1,7 @@
 .login-root {
   align-content: end;
   display: grid;
-  height: 100dvh;
+  height: calc(100dvh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
   margin-inline: auto;
   max-width: 640px;
   padding: 12px;
