--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -41,7 +41,9 @@
 
 body {
   margin: 0px;
-  padding: 0px;
+  padding-block-end: env(safe-area-inset-bottom);
+  padding-block-start: env(safe-area-inset-top);
+  padding-inline: 0px;
 }
 
 h1,
